WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249919
[contain-intrinsic-size] auto-009.html is failing
https://bugs.webkit.org/show_bug.cgi?id=249919
Summary
[contain-intrinsic-size] auto-009.html is failing
cathiechen
Reported
2022-12-27 21:39:35 PST
To fix auto-009.html, looks like we need to store last remembered width and height instead of size.
Attachments
WIP-patch
(11.75 KB, patch)
2022-12-27 21:40 PST
,
cathiechen
no flags
Details
Formatted Diff
Diff
WIP-patch
(11.54 KB, patch)
2023-02-09 05:32 PST
,
cathiechen
no flags
Details
Formatted Diff
Diff
WIP-patch
(11.12 KB, patch)
2023-02-10 04:17 PST
,
cathiechen
no flags
Details
Formatted Diff
Diff
WIP-patch
(10.68 KB, patch)
2023-02-10 05:49 PST
,
cathiechen
no flags
Details
Formatted Diff
Diff
WIP-patch
(10.62 KB, patch)
2023-02-10 06:15 PST
,
cathiechen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
cathiechen
Comment 1
2022-12-27 21:40:02 PST
Created
attachment 464232
[details]
WIP-patch
Radar WebKit Bug Importer
Comment 2
2023-01-03 21:40:17 PST
<
rdar://problem/103860290
>
Oriol Brufau
Comment 3
2023-01-09 06:58:54 PST
Comment on
attachment 464232
[details]
WIP-patch View in context:
https://bugs.webkit.org/attachment.cgi?id=464232&action=review
> Source/WebCore/dom/ElementRareData.cpp:44 > + LayoutUnit lastRemembedHeight;
These should be logical (since ResizeObserver tracks changes to the logical sizes).
cathiechen
Comment 4
2023-02-09 05:32:58 PST
Created
attachment 464921
[details]
WIP-patch
cathiechen
Comment 5
2023-02-09 05:33:29 PST
(In reply to Oriol Brufau from
comment #3
)
> Comment on
attachment 464232
[details]
> WIP-patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=464232&action=review
> > > Source/WebCore/dom/ElementRareData.cpp:44 > > + LayoutUnit lastRemembedHeight; > > These should be logical (since ResizeObserver tracks changes to the logical > sizes).
Done, thanks:)
Oriol Brufau
Comment 6
2023-02-09 06:40:12 PST
Comment on
attachment 464921
[details]
WIP-patch View in context:
https://bugs.webkit.org/attachment.cgi?id=464921&action=review
> Source/WebCore/dom/Element.cpp:4484 > +void Element::clearLastRememberedLogicalSize()
Maybe clearLastRememberedSizes? No need to consider it logical since it's clearing both.
> Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:351 > + element.setLastRememberedLogicalWidth(LayoutUnit(-1));
You are checking the physical containIntrinsicWidthType but clearing the logical setLastRememberedLogicalWidth. I don't think this will work in a vertical writing mode.
cathiechen
Comment 7
2023-02-09 08:08:15 PST
Comment on
attachment 464921
[details]
WIP-patch View in context:
https://bugs.webkit.org/attachment.cgi?id=464921&action=review
>> Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:351 >> + element.setLastRememberedLogicalWidth(LayoutUnit(-1)); > > You are checking the physical containIntrinsicWidthType but clearing the logical setLastRememberedLogicalWidth. > I don't think this will work in a vertical writing mode.
Ah, yes, should check writing mode here! Will do, thanks!
cathiechen
Comment 8
2023-02-10 04:17:57 PST
Created
attachment 464940
[details]
WIP-patch
cathiechen
Comment 9
2023-02-10 05:49:56 PST
Created
attachment 464941
[details]
WIP-patch
cathiechen
Comment 10
2023-02-10 06:15:21 PST
Created
attachment 464942
[details]
WIP-patch
cathiechen
Comment 11
2023-02-20 05:34:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10359
EWS
Comment 12
2023-02-28 06:17:45 PST
Committed
260939@main
(d8e31024efa9): <
https://commits.webkit.org/260939@main
> Reviewed commits have been landed. Closing PR #10359 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug