[contain-intrinsic-size] auto-009.html is failing https://bugs.webkit.org/show_bug.cgi?id=249919

Reviewed by Oriol Brufau.

According to [1], "last remembered size" is tracked for the two axises independently, and can be invoked independently.
This patch supports "last remembered size" in a single direction. It replaces the m_lastRememberedSize of
m_lastRememberedLogicalWidth and m_lastRememberedLogicalHeight in ElementRareData. The value -1 means there is
no last remembered width/height.

[1] https://github.com/w3c/csswg-drafts/issues/7529

* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-009-expected.txt:
* Source/WebCore/dom/ContainerNode.cpp:
(WebCore::ContainerNode::removeChild):
* Source/WebCore/dom/Document.cpp:
(WebCore::CallbackForContainIntrinsicSize):
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::lastRememberedLogicalWidth const):
(WebCore::Element::lastRememberedLogicalHeight const):
(WebCore::Element::setLastRememberedLogicalWidth):
(WebCore::Element::clearLastRememberedLogicalWidth):
(WebCore::Element::setLastRememberedLogicalHeight):
(WebCore::Element::clearLastRememberedLogicalHeight):
(WebCore::Element::lastRememberedSize const): Deleted.
(WebCore::Element::setLastRememberedSize): Deleted.
(WebCore::Element::clearLastRememberedSize): Deleted.
* Source/WebCore/dom/Element.h:
* Source/WebCore/dom/ElementRareData.cpp:
* Source/WebCore/dom/ElementRareData.h:
(WebCore::LayoutUnitMarkableTraits::isEmptyValue):
(WebCore::LayoutUnitMarkableTraits::emptyValue):
(WebCore::ElementRareData::lastRememberedLogicalWidth const):
(WebCore::ElementRareData::lastRememberedLogicalHeight const):
(WebCore::ElementRareData::setLastRememberedLogicalWidth):
(WebCore::ElementRareData::setLastRememberedLogicalHeight):
(WebCore::ElementRareData::clearLastRememberedLogicalWidth):
(WebCore::ElementRareData::clearLastRememberedLogicalHeight):
(WebCore::ElementRareData::useTypes const):
(WebCore::ElementRareData::lastRememberedSize const): Deleted.
(WebCore::ElementRareData::setLastRememberedSize): Deleted.
(WebCore::ElementRareData::clearLastRememberedSize): Deleted.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::explicitIntrinsicInnerWidth const):
(WebCore::RenderBox::explicitIntrinsicInnerHeight const):
* Source/WebCore/rendering/style/RenderStyle.h:
(WebCore::RenderStyle::containIntrinsicLogicalWidthType const):
(WebCore::RenderStyle::containIntrinsicLogicalHeightType const):
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::updateElementRenderer):

Canonical link: https://commits.webkit.org/260939@main